fix(Modal): set correct modal overlay z-index

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -55,7 +55,7 @@
 
 .overlay {
   position: fixed;
-  z-index: 100;
+  z-index: var(--z-index-overlay);
   top: 0;
   right: 0;
   bottom: 0;
